--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="logout">
-  <p>Logged out!</p>
-  <a href="{% url 'login'%}">Click here to login again.</a>
+  <h2>Logged out!</h2>
+  <br>
+  <p>Click<a href="{% url 'login'%}"> here </a>to login again.</p>
 </div>
 {% endblock %}
 
