--- a/templates/confirm_delete_guitar.html
+++ b/templates/confirm_delete_guitar.html
@@ -1,15 +1,14 @@
 {% extends "base.html" %} {% block content %}
 
-<h1>Confirm Delete Guitar</h1>
-
-<h1>Are you sure you want to delete this guitar</h1>
+<div class="confirm_delete">
+<h2>Are you sure you want to delete this guitar</h2>
 <p>Guitar: {{guitar.brand}}
 <form method='POST' action='{% url "delete_guitar" guitar_id=guitar.id %}'>
     {% csrf_token %}
-    <input type='submit' value='Yes, delete'>
-    <a href='{% url "show_guitars" %}'>No</a>
+    <input type='submit' value='Yes, delete' class="btn btn-danger">
+    <a href='{% url "show_guitars" %}' class="btn btn-success">NO!</a>
 </form>
-
+</div>
 
 
 {% endblock %}
