--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -3,9 +3,8 @@
 {% block content %}
 
 <div class="password_reset_done">
-
+<h2>Success!</h2>    
 <p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
-
 <p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
 
 </div>
