Styled no results page

--- a/templates/show_guitars.html
+++ b/templates/show_guitars.html
@@ -9,7 +9,7 @@
 
 <div class="guitar_shop">
 	{% for guitar in all_guitars %} {% empty %}
-	<h1>No results</h1>
+	<h1>No results are found.</h1>
 	{% endfor %} {% for guitar in all_guitars %}
 	<div class="card mb-3">
 		<div class="row no-gutters">
