--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -154,6 +154,13 @@
 	border: 1px solid black;
 }
 
+.guitar_shop h1 {
+	text-align: center;
+	margin: 3rem;
+	margin-top: 5rem;
+	margin-bottom: 30rem;
+}
+
 .guitar_shop .card {
 	margin: 1rem;
 	border: none;
@@ -393,6 +400,10 @@
 		margin: 4rem;
 		/*border: none;*/
 	}
+	
+	.guitar_shop h1 {
+	margin-bottom: 45rem;
+	}
 
 	.about_us {
 		margin: 4rem;
@@ -444,10 +455,13 @@
 	}
 	
 	.password_reset_done {
-	margin-bottom: 65rem;
+		margin-bottom: 65rem;
+	}
+	
+	.guitar_shop h1 {
+		margin-bottom: 68rem;
 	}
 
-	
 	.sellguitar .sell_img {
 		text-align: center;
 		margin: 1rem auto;
