Ensure only logged in users can CRUD guitars

--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -18,40 +18,40 @@
 					PRODUCTS
 *********************************************/
 
-.product {
-	height: 321px;
-}
+/*.product {*/
+/*	height: 321px;*/
+/*}*/
 
-.product>img {
-	max-width: 230px;
-}
+/*.product>img {*/
+/*	max-width: 230px;*/
+/*}*/
 
-.product-rating {
-	font-size: 20px;
-	margin-bottom: 25px;
-}
+/*.product-rating {*/
+/*	font-size: 20px;*/
+/*	margin-bottom: 25px;*/
+/*}*/
 
-.product-title {
-	font-size: 20px;
-}
+/*.product-title {*/
+/*	font-size: 20px;*/
+/*}*/
 
-.product-desc {
-	font-size: 14px;
-}
+/*.product-desc {*/
+/*	font-size: 14px;*/
+/*}*/
 
-.product-price {
-	font-size: 22px;
-}
+/*.product-price {*/
+/*	font-size: 22px;*/
+/*}*/
 
-.product-stock {
-	color: #74DF00;
-	font-size: 20px;
-	margin-top: 10px;
-}
+/*.product-stock {*/
+/*	color: #74DF00;*/
+/*	font-size: 20px;*/
+/*	margin-top: 10px;*/
+/*}*/
 
-.product-info {
-	margin-top: 50px;
-}
+/*.product-info {*/
+/*	margin-top: 50px;*/
+/*}*/
 
 /*********************************************
 					VIEW
@@ -464,7 +464,7 @@
 
 	.sellguitar .sell_img {
 		text-align: center;
-		margin: 1rem auto;
+		margin: 1rem auto; 
 	}
 	
 	.sellguitar img {
