--- a/templates/show_guitars.html
+++ b/templates/show_guitars.html
@@ -28,11 +28,13 @@
 					<p class="card-text">{{guitar.desc}}</p>
 					<div class="btn-group">
 						<a href="{% url 'add_to_cart' guitar_id=guitar.id %}" class="btn btn-success">Add to Cart</a>
+						{% if user.is_authenticated %}
 						<a href="{% url 'update_guitar' guitar_id=guitar.id %}" class="btn btn-primary ml-1">Edit</a>
+						<a href="{% url 'confirm_delete_guitar' guitar_id=guitar.id %}" class="btn btn-danger ml-1">Delete</a>
+						{% endif %}
 					</div>
-					<div class="btn-group">
-						<a href="{% url 'confirm_delete_guitar' guitar_id=guitar.id %}" class="btn btn-danger">Delete</a>
-					</div>
+					<!--<div class="btn-group">-->
+					<!--</div>-->
 				</div>
 			</div>
 		</div>
