--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <meta name="author" content="">
 
   <title>Jimbo Guitars</title>
-  
+
   <link rel="icon" href="{% static 'images/JG logo.png' %}" type="image/x-icon" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
@@ -18,91 +18,86 @@
 </head>
 
 <body>
-  
+
   <!--<div class="container-fluid">-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <img class="nav-item" src="/static/images/JG logo.png" alt="#"></a>
-      <a class="navbar-brand" href="{% url 'home' %}">Jimbo Guitars</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+    <img class="nav-item" src="/static/images/JG logo.png" alt="#"></a>
+    <a class="navbar-brand" href="{% url 'home' %}">Jimbo Guitars</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <!--<form class="form-inline my-2 my-lg-0" method='GET'>-->
-          <!--  <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">-->
-          <!--  <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>-->
-          <!--</form>-->
-          <form method="GET" class="form-inline" action="{% url 'show_guitars' %}">
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <!--<form class="form-inline my-2 my-lg-0" method='GET'>-->
+        <!--  <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">-->
+        <!--  <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>-->
+        <!--</form>-->
+        <form method="GET" class="form-inline" action="{% url 'show_guitars' %}">
           <input name="search_terms" class="form-control mr-sm-2" type="search" placeholder="Search for Guitars">
           <button class="btn btn-outline-light search_button" type="submit"><i class="fas fa-search"></i></button>
         </form>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'home' %}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'show_guitars' %}">Shop</a>
+        </li>
+        {% if user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'create_guitars' %}">Sell</a>
+        </li>
+        {% endif %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'about_us' %}">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'view_cart' %}">Shopping Cart ({{number_of_items}})</a>
+        </li>
+      </ul>
+      <div class="dropdown">
+        {% if user.is_authenticated %}
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {{user.username}}
+        </button> {% endif %} {% if not user.is_authenticated %}
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          User
+        </button> {% endif %}
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">Home</a>
+            {% if not user.is_authenticated %}
+            <a class="nav-link" href="{% url 'signup' %}">Signup</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'show_guitars' %}">Shop</a>
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
           </li>
-          {% if user.is_authenticated %}
+          {% endif %} {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'create_guitars' %}">Sell</a>
+            <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           </li>
           {% endif %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'about_us' %}">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'view_cart' %}">Shopping Cart ({{number_of_items}})</a>
-          </li>
-        </ul>
-        <div class="dropdown">
-          {% if user.is_authenticated %}
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          {{user.username}}
-        </button>
-        {% endif %}
-        {% if not user.is_authenticated %}
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          User
-        </button>
-        {% endif %}
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <li class="nav-item">
-              {% if not user.is_authenticated %}
-              <a class="nav-link" href="{% url 'signup' %}">Signup</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">Login</a>
-            </li>
-            {% endif %} 
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-            </li>
-            {% endif %}
-          </div>
         </div>
       </div>
+    </div>
   </nav>
-      <!--</div>-->
-      
-      <div class="container-fluid">
-   {% if messages %}
-  <div class="alert alert-success mt-4" role="alert">
-    <div>
-      {% for message in messages %} {{ message }} {% endfor %}
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+  <!--</div>-->
+
+  <div class="container-fluid">
+    {% if messages %}
+    <div class="alert alert-success mt-4" role="alert">
+      <div>
+        {% for message in messages %} {{ message }} {% endfor %}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
+      </div>
+      {% endif %}
     </div>
-    {% endif %}
   </div>
-</div>
 
-
-  <div class='container'>
+  <div class="container">
     {%block content%}{%endblock%}
   </div>
 
