--- a/templates/index.html
+++ b/templates/index.html
@@ -13,142 +13,141 @@
       </div>
     </div>
 
-      <div class="col-lg-9">
-        <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <img class="d-block img-fluid" src="/static/images/Shop.jpg" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="/static/images/60s-LP.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block img-fluid" src="/static/images/Acoustasonic.jpg" alt="Third slide">
-            </div>
+    <div class="content col-lg-9">
+      <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active">
+            <img class="d-block img-fluid" src="/static/images/Shop.jpg" alt="First slide">
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <div class="carousel-item">
+            <img class="d-block img-fluid" src="/static/images/60s-LP.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block img-fluid" src="/static/images/Acoustasonic.jpg" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
+      </div>
+
+      <div>
+        <h4>Welcome to Jimbo Guitars</h4>
+        <p>Our vast selection of used and vintage guitars and amps includes Fender, Gibson, Gretsch and many other brands. We also carry many Japanese vintage electric guitars from the 80’s. We pay top dollar for used and vintage guitars and amps etc and
+          members can list your instruments for sale via our online shop. Tell us what you’ve got! We offer FREE appraisals for your used and vintage instruments by our certified vintage expert.</p>
+      </div>
+
+      <h4>Featured Products - Please call us for enquiry and private viewing</h4>
+
+      <div class="row">
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="/static/images/Featured-1964Strat.jpg" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <p>1964 Fender Stratocaster</p>
+              </h4>
+              <h5>$32,950</h5>
+              <p class="card-text">Year: 1964<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+            </div>
+          </div>
         </div>
 
-        <div>
-          <h4>Welcome to Jimbo Guitars</h4>
-          <p>Our vast selection of used and vintage guitars and amps includes Fender, Gibson, Gretsch and many other brands. We also carry many Japanese vintage electric guitars from the 80’s. We pay top dollar for used and vintage guitars and amps etc and
-            members can list your instruments for sale via our online shop. Tell us what you’ve got! We offer FREE appraisals for your used and vintage instruments by our certified vintage expert.</p>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="/static/images/Featured-1956LPGoldTop.jpg" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <p>1956 Gibson Les Paul Goldtop</p>
+              </h4>
+              <h5>$35,995</h5>
+              <p class="card-text">Year: 1956<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+            </div>
+          </div>
         </div>
 
-        <h4>Featured Products - Please call us for enquiry and private viewing</h4>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/static/images/Featured-1964Strat.jpg" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <p>1964 Fender Stratocaster</p>
-                </h4>
-                <h5>$32,950</h5>
-                <p class="card-text">Year: 1964<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-              </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="/static/images/Featured-1962GLPSSG.jpg" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <p>1962 Gibson Les Paul Standard (SG)</p>
+              </h4>
+              <h5>$24,955</h5>
+              <p class="card-text">Year: 1962<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
             </div>
           </div>
+        </div>
 
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/static/images/Featured-1956LPGoldTop.jpg" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <p>1956 Gibson Les Paul Goldtop</p>
-                </h4>
-                <h5>$35,995</h5>
-                <p class="card-text">Year: 1956<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-              </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="/static/images/Featured-1940MartinD28.jpg" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <p>1940 Martin D-28</p>
+              </h4>
+              <h5>$88,950</h5>
+              <p class="card-text">Year: 1940<br>Condition: Very Good<br>Case: Hard Shell Case</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
             </div>
           </div>
+        </div>
 
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/static/images/Featured-1962GLPSSG.jpg" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <p>1962 Gibson Les Paul Standard (SG)</p>
-                </h4>
-                <h5>$24,955</h5>
-                <p class="card-text">Year: 1962<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-              </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="/static/images/Featured-1958GFVK.jpg" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <p>1958 Gibson <br>Flying V</p>
+              </h4>
+              <h5>$410,000</h5>
+              <p class="card-text">Year: 1958<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
             </div>
           </div>
+        </div>
 
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/static/images/Featured-1940MartinD28.jpg" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <p>1940 Martin D-28</p>
-                </h4>
-                <h5>$88,950</h5>
-                <p class="card-text">Year: 1940<br>Condition: Very Good<br>Case: Hard Shell Case</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-              </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="/static/images/Featured-1955StratBlonde.jpg" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <p>1956 Fender Stratocaster Hardtail Blonde</p>
+              </h4>
+              <h5>$56,950</h5>
+              <p class="card-text">Year: 1956<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
             </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/static/images/Featured-1958GFVK.jpg" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <p>1958 Gibson <br>Flying V</p>
-                </h4>
-                <h5>$410,000</h5>
-                <p class="card-text">Year: 1940<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="/static/images/Featured-1955StratBlonde.jpg" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <p>1956 Fender Stratocaster Hardtail Blonde</p>
-                </h4>
-                <h5>$56.950</h5>
-                <p class="card-text">Year: 1955<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-              </div>
+            <div class="card-footer">
+              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-
+</div>
 
 {% endblock %}
