--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -242,6 +242,21 @@ text-align: center;
 	margin-bottom: 15rem;
 }
 
+/*shipping form page*/
+.shipping_form {
+	width: 80%;
+	height: 650px;
+	border: 2px solid black;
+	border-radius: 25px;
+	box-shadow: 2px 2px 8px grey;
+	margin: 2rem auto;
+	padding: 30px;
+}
+
+.shipping_form a {
+	width: 100%;
+}
+
 /*Signup page*/
 
 .signup_form {
