Provided place_order.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 <body>
 
   <!--<div class="container-fluid">-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <img class="nav-item" src="/static/images/JG logo.png" alt="#"></a>
     <a class="navbar-brand" href="{% url 'home' %}">Jimbo Guitars</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
