--- a/templates/place_order.html
+++ b/templates/place_order.html
@@ -4,8 +4,7 @@
 
 {% block content %}
 
-<div class="shipping_form">
-    <!--<h1>hi</h1>-->
+<div class="place_order">
     <form method='POST'>
         <h4>Please provide your shipping details</h4>
         {% csrf_token %} 
