--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -142,7 +142,6 @@
 /* Jimbo's*/
 
 /*navbar*/
-
 .dropdown-menu a {
 	color: black;
 }
@@ -242,8 +241,8 @@ text-align: center;
 	margin-bottom: 15rem;
 }
 
-/*shipping form page*/
-.shipping_form {
+/*place order page*/
+.place_order {
 	width: 80%;
 	height: 700px;
 	border: 2px solid black;
@@ -253,7 +252,7 @@ text-align: center;
 	padding: 30px;
 }
 
-.shipping_form a {
+.place_order a {
 	width: 100%;
 }
 
@@ -287,12 +286,16 @@ text-align: center;
 
 .logout {
 	width: 80%;
-	height: 300px;
+	height: 400px;
 	border: 2px solid black;
 	border-radius: 25px;
 	box-shadow: 2px 2px 8px grey;
 	margin: 8rem auto;
 	padding: 30px;
+}
+
+.logout img {
+	width: 100%;
 }
 
 /*login page*/
@@ -477,12 +480,7 @@ text-align: center;
 
 	.logout {
 		width: 50%;
-		height: 600px;
-	}
-	
-	#logout {
-		width: 100%;
-		height: 60%;
+		height: 800px;
 	}
 	
 	.password_reset_done {
@@ -529,6 +527,9 @@ text-align: center;
 @media (min-width: 2000px) {
 	.guitar_shop .card img {
 		margin-left: 8rem;
+	}
+	.logout {
+		height: 1100px;
 	}
 }
 
