--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -20,7 +20,7 @@
         <li class="phone">Tel: 678 8688</li>
         <li class="fax">Fax: 678 8678</li>
         <li class="add">Address: Blk 888, RocknRoll Street #02-08 SG Guitar Complex Singapore</li>
-        <li class="email">Email: support@jimboguitars.sg</li>
+        <li class="email">Email: support@jimboguitars.com.sg</li>
     </ul>
 
     <h2>Store Hours</h2>
