--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -4,7 +4,7 @@
   <h2>Logged out!</h2>
   <br>
   <p>Click<a href="{% url 'login'%}"> here </a>to login again.</p>
-  <img id="logout" src="/static/images/See You Again.png" alt="Italian Trulli">
+  <img id="logout" src="/static/images/See You Again.png" alt="Cya Again">
 </div>
 
 {% endblock %}
