--- a/templates/index.html
+++ b/templates/index.html
@@ -22,13 +22,13 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active">
-            <img class="d-block img-fluid" src="/static/images/Shop.jpg" alt="First slide">
+            <img class="d-block img-fluid" src="{% static 'images/Shop.jpg' %}" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block img-fluid" src="/static/images/60s-LP.jpg" alt="Second slide">
+            <img class="d-block img-fluid" src="{% static 'images/60s-LP.jpg' %}" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block img-fluid" src="/static/images/Acoustasonic.jpg" alt="Third slide">
+            <img class="d-block img-fluid" src="{% static 'images/Acoustasonic.jpg' %}" alt="Third slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -52,7 +52,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="/static/images/Featured-1964Strat.jpg" alt=""></a>
+            <a href="#"><img class="card-img-top" src="{% static 'images/Featured-1964Strat.jpg' %}" alt="1964 Strat"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <p>1964 Fender Stratocaster</p>
@@ -68,7 +68,7 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="/static/images/Featured-1956LPGoldTop.jpg" alt=""></a>
+            <a href="#"><img class="card-img-top" src="{% static 'images/Featured-1956LPGoldTop.jpg' %}" alt="19567 Gibson LP"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <p>1956 Gibson Les Paul Goldtop</p>
@@ -84,7 +84,7 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="/static/images/Featured-1962GLPSSG.jpg" alt=""></a>
+            <a href="#"><img class="card-img-top" src="{% static 'images/Featured-1962GLPSSG.jpg' %}" alt="1962 Gibsob LPS"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <p>1962 Gibson Les Paul Standard (SG)</p>
@@ -100,7 +100,7 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="/static/images/Featured-1940MartinD28.jpg" alt=""></a>
+            <a href="#"><img class="card-img-top" src="{% static 'images/Featured-1940MartinD28.jpg' %}" alt="1940 Martin"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <p>1940 Martin D-28</p>
@@ -116,7 +116,7 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="/static/images/Featured-1958GFVK.jpg" alt=""></a>
+            <a href="#"><img class="card-img-top" src="{% static 'images/Featured-1958GFVK.jpg' %}" alt="1958 Fly V"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <p>1958 Gibson <br>Flying V</p>
@@ -132,7 +132,7 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="/static/images/Featured-1955StratBlonde.jpg" alt=""></a>
+            <a href="#"><img class="card-img-top" src="{% static 'images/Featured-1955StratBlonde.jpg' %}" alt="1956 Strat Blonde"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <p>1956 Fender Stratocaster Hardtail Blonde</p>
