--- a/templates/place_order.html
+++ b/templates/place_order.html
@@ -1,17 +1,11 @@
-{% extends "base.html" %} 
-
-{% load crispy_forms_tags %} 
-
-{% block content %}
+{% extends "base.html" %} {% load crispy_forms_tags %} {% block content %}
 
 <div class="place_order">
     <form method='POST'>
         <h4>Please provide your shipping details</h4>
-        {% csrf_token %} 
-        {{ order_form|crispy}}
-        <a href="{% url 'checkout' %}" id="checkout" class="btn btn-success mt-4">CHECKOUT</a> 
+        {% csrf_token %} {{ order_form|crispy}}
+        <a href="{% url 'checkout' %}" id="checkout" class="btn btn-success mt-4">CHECKOUT</a>
     </form>
 </div>
-
 
 {% endblock %}
