--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,22 +1,17 @@
-{% extends "base.html" %}
-
-{% block content %}
-
-{% load crispy_forms_tags %} 
+{% extends "base.html" %} {% block content %} {% load crispy_forms_tags %}
 
 <div class="password_reset_form">
     <h2>Password Reset</h2>
-<p>Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.</p>
+    <p>Forgotten your password? Enter your email address below, and we’ll email instructions for setting a new one.</p>
 
-<form method="post">
-    {% csrf_token %}
-    <div class="form-row field-email">
+    <form method="post">
+        {% csrf_token %}
+        <div class="form-row field-email">
 
-        {{ form.email.label_tag }}
-        {{ form.email }}
+            {{ form.email.label_tag }} {{ form.email }}
 
-    </div>
-    <input type="submit" value="Reset my password" class="btn btn-success password_reset_btn">
-</form>
+        </div>
+        <input type="submit" value="Reset my password" class="btn btn-success password_reset_btn">
+    </form>
 </div>
 {% endblock %}
