--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -1,61 +1,10 @@
-/*********************************************
-    			Call Bootstrap
-*********************************************/
-
 @import url("bootstrap/bootstrap.min.css");
 @import url("bootstrap-override.css");
 @import url("//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
 
-/*********************************************
-        		Theme Elements
-*********************************************/
-
 .gold {
 	color: #FFBF00;
 }
-
-/*********************************************
-					PRODUCTS
-*********************************************/
-
-/*.product {*/
-/*	height: 321px;*/
-/*}*/
-
-/*.product>img {*/
-/*	max-width: 230px;*/
-/*}*/
-
-/*.product-rating {*/
-/*	font-size: 20px;*/
-/*	margin-bottom: 25px;*/
-/*}*/
-
-/*.product-title {*/
-/*	font-size: 20px;*/
-/*}*/
-
-/*.product-desc {*/
-/*	font-size: 14px;*/
-/*}*/
-
-/*.product-price {*/
-/*	font-size: 22px;*/
-/*}*/
-
-/*.product-stock {*/
-/*	color: #74DF00;*/
-/*	font-size: 20px;*/
-/*	margin-top: 10px;*/
-/*}*/
-
-/*.product-info {*/
-/*	margin-top: 50px;*/
-/*}*/
-
-/*********************************************
-					VIEW
-*********************************************/
 
 .content-wrapper {
 	max-width: 1140px;
@@ -83,10 +32,6 @@
 	padding-right: 0px;
 	max-width: 100%;
 }
-
-/*********************************************
-				ITEM 
-*********************************************/
 
 .service1-items {
 	padding: 0px 0 0px 0;
@@ -138,20 +83,12 @@
 	max-height: 300px;
 }
 
-
-/* Jimbo's*/
-
 /*navbar*/
 .dropdown-menu a {
 	color: black;
 }
 
-
-/*Scroll to Top*/
-
-
 /*homepage*/
-
 .list-group a {
 	color: black;
 	border: 1px solid black;
@@ -172,11 +109,9 @@
 
 .guitar_shop .card img {
 	max-width: 170px;
-	/*margin-left: 3.5rem;*/
 }
 
 /*about_us page*/
-
 .about_us {
 	margin: 2rem;
 }
@@ -187,7 +122,6 @@
 }
 
 /*cart page*/
-
 .guitar_cart .card {
 	margin: 2rem 2rem;
 	padding: 10px;
@@ -222,14 +156,13 @@
 }
 
 .total_price {
-text-align: center;
-    font-weight: bold;
-    font-size: 1.5rem;
-    margin-bottom: 5px;
+	text-align: center;
+	font-weight: bold;
+	font-size: 1.5rem;
+	margin-bottom: 5px;
 }
 
 /*empty cart*/
-
 .empty_cart h2 {
 	margin: 0 auto;
 	margin-top: 10rem;
@@ -257,7 +190,6 @@ text-align: center;
 }
 
 /*Signup page*/
-
 .signup_form {
 	width: 80%;
 	height: 800px;
@@ -273,7 +205,6 @@ text-align: center;
 }
 
 /*profile page*/
-
 .profile {
 	width: 80%;
 	height: 300px;
@@ -292,7 +223,7 @@ text-align: center;
 	text-align-last: center;
 }
 
-.logout{
+.logout {
 	width: 80%;
 	height: 400px;
 	border: 2px solid black;
@@ -307,7 +238,6 @@ text-align: center;
 }
 
 /*login page*/
-
 .login_form {
 	width: 80%;
 	height: 400px;
@@ -323,8 +253,7 @@ text-align: center;
 	margin: 1rem auto;
 }
 
-/*forgot password page*/
-
+/*forget password page*/
 .password_reset_form {
 	width: 80%;
 	height: 400px;
@@ -337,12 +266,10 @@ text-align: center;
 
 .password_reset_form input {
 	border: 1px solid black;
-	/* margin-left: 5px; */
 	width: 100%;
 }
 
 .password_reset_form .password_reset_btn {
-	/*width: 100%;*/
 	margin: 1rem auto;
 	border: none;
 }
@@ -351,11 +278,10 @@ text-align: center;
 .password_reset_done {
 	margin: 2rem;
 	margin-top: 5rem;
-    margin-bottom: 25rem;
+	margin-bottom: 25rem;
 }
 
 /*sell guitar page*/
-
 .sellguitar img {
 	width: 100%;
 	/*margin-top: 2rem;*/
@@ -424,7 +350,6 @@ text-align: center;
 
 @media (min-width: 576px) {
 	.guitar_cart .apply_btn {
-		/*position: relative;*/
 		top: 0;
 	}
 	.guitar_cart .remove_btn {
@@ -435,11 +360,10 @@ text-align: center;
 @media (min-width: 768px) {
 	.guitar_shop .card {
 		margin: 4rem;
-		/*border: none;*/
 	}
-	
+
 	.guitar_shop h1 {
-	margin-bottom: 45rem;
+		margin-bottom: 45rem;
 	}
 
 	.about_us {
@@ -465,7 +389,7 @@ text-align: center;
 		width: 50%;
 		height: 900px;
 	}
-	
+
 	.password_reset_done {
 		margin-bottom: 40rem;
 	}
@@ -490,37 +414,36 @@ text-align: center;
 		width: 50%;
 		height: 800px;
 	}
-	
+
 	.password_reset_done {
 		margin-bottom: 65rem;
 	}
-	
+
 	.guitar_shop h1 {
 		margin-bottom: 68rem;
 	}
 
 	.sellguitar .sell_img {
 		text-align: center;
-		margin: 1rem auto; 
+		margin: 1rem auto;
 	}
-	
+
 	.sellguitar img {
 		width: 50%;
 	}
-	
+
 	.sellguitar_form {
 		width: 60%;
 	}
 
 	.update_guitars {
-		/*width: 50%;*/
 		height: 1150px;
 	}
-	
+
 	.confirm_delete {
 		height: 1150px;
 	}
-	
+
 	.signup_form {
 		width: 80%;
 		height: 950px;
@@ -540,6 +463,3 @@ text-align: center;
 		height: 1100px;
 	}
 }
-
-
-
