--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,10 +1,9 @@
-{% extends 'base.html' %}
-{% load static %}
+{% extends 'base.html' %} {% load static %} {%block content %}
 
-{%block content %}
 <div class="profile">
-<h1>Profile</h1>
-<p>Username: {{current_user.username}}</p>
-<img id="profile" src="{% static 'images/profile.png' %}" alt="Profile">
+    <h1>Profile</h1>
+    <p>Username: {{current_user.username}}</p>
+    <img id="profile" src="{% static 'images/profile.png' %}" alt="Profile">
 </div>
+
 {%endblock%}
