--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,29 +1,24 @@
-{% extends "base.html" %} 
+{% extends "base.html" %} {% block content %} {% load crispy_forms_tags %}
 
-{% block content %}
+<div class="login_form">
+    <h2>Login</h2>
+    {% if form.errors %}
+    <p>Your username and password didn't match. Please try again.</p>
+    {% endif %} {% if next %} {% if user.is_authenticated %}
+    <p>Your account doesn't have access to this page. To proceed, please login with an account that has access.</p>
+    {% else %}
+    <p>Please login to see this page.</p>
+    {% endif %} {% endif %}
 
-{% load crispy_forms_tags %} 
+    <form method="post" action="{% url 'login' %}">
+        {% csrf_token %} {{ form|crispy }}
 
-    <div class="login_form">
-        <h2>Login</h2>
-        {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
-        {% endif %} {% if next %} {% if user.is_authenticated %}
-        <p>Your account doesn't have access to this page. To proceed, please login with an account that has access.</p>
-        {% else %}
-        <p>Please login to see this page.</p>
-        {% endif %} {% endif %}
+        <input type="submit" value="Login" class="btn btn-success login_btn">
+        <input type="hidden" name="next" value="{{ next }}">
+    </form>
 
-        <form method="post" action="{% url 'login' %}">
-            {% csrf_token %}
-            {{ form|crispy }}
-
-            <input type="submit" value="Login" class="btn btn-success login_btn">
-            <input type="hidden" name="next" value="{{ next }}">
-        </form>
-
-        {# Assumes you setup the password_reset view in your URLconf #}
-        <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-    </div>
+    {# Assumes you setup the password_reset view in your URLconf #}
+    <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+</div>
 
 {% endblock %}
