--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,11 +1,9 @@
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 
 <div class="password_reset_done">
-<h2>Success!</h2>    
-<p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
-<p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
+    <h2>Success!</h2>
+    <p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
+    <p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
 
 </div>
 {% endblock %}
