--- a/templates/show_guitars.html
+++ b/templates/show_guitars.html
@@ -1,11 +1,4 @@
 {% extends "base.html" %} {% block content %}
-<!--{% load crispy_forms_tags %}-->
-<!--<div class="container-fluid showguitar">-->
-	<!--<form method='GET'>-->
-	<!--	{{ search_form|crispy}}-->
-	<!--	<input type='submit' value='Search' />-->
-	<!--</form>-->
-<!--</div>-->
 
 <div class="guitar_shop">
 	{% for guitar in all_guitars %} {% empty %}
@@ -27,64 +20,14 @@
 					<div class="product-stock">In Stock</div>
 					<p class="card-text">{{guitar.desc}}</p>
 					<div class="btn-group">
-						<a href="{% url 'add_to_cart' guitar_id=guitar.id %}" class="btn btn-success">Add to Cart</a>
-						{% if user.is_authenticated %}
+						<a href="{% url 'add_to_cart' guitar_id=guitar.id %}" class="btn btn-success">Add to Cart</a> {% if user.is_authenticated %}
 						<a href="{% url 'update_guitar' guitar_id=guitar.id %}" class="btn btn-primary ml-1">Edit</a>
-						<a href="{% url 'confirm_delete_guitar' guitar_id=guitar.id %}" class="btn btn-danger ml-1">Delete</a>
-						{% endif %}
+						<a href="{% url 'confirm_delete_guitar' guitar_id=guitar.id %}" class="btn btn-danger ml-1">Delete</a> {% endif %}
 					</div>
-					<!--<div class="btn-group">-->
-					<!--</div>-->
 				</div>
 			</div>
 		</div>
 	</div>
-
-	<!--<div class="content-wrapper">-->
-	<!--	<div class="item-container">-->
-	<!--		<div class="container">-->
-	<!--			<div class="col-md-12">-->
-	<!--				<div class="product col-md-3 service-image-left">-->
-	<!--					<center>-->
-
-	<!--						{%if guitar.image %}-->
-	<!--						<img id="item-display" src="{{guitar.image.cdn_url}}" alt=""></img>-->
-	<!--						{%endif%}-->
-	<!--					</center>-->
-	<!--				</div>-->
-	<!--			</div>-->
-	<!--			<div class="col-md-7">-->
-	<!--				<div class="product-title">{{guitar.brand}}</div>-->
-	<!--				<div class="product-desc">{{guitar.model}}</div>-->
-	<!--				<div class="product-desc">{{guitar.color}}</div>-->
-	<!--				<div class="product-rating"><i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star-o"></i>-->
-	<!--				</div>-->
-	<!--				<hr>-->
-	<!--				<div class="product-price">${{guitar.cost}}</div>-->
-	<!--				<div class="product-stock">In Stock</div>-->
-	<!--				<hr>-->
-	<!--				<div class="btn-group">-->
-	<!--					<a href="{% url 'add_to_cart' guitar_id=guitar.id %}" class="btn btn-success">Add to Cart</a>-->
-	<!--					<a href="{% url 'update_guitar' guitar_id=guitar.id %}" class="btn btn-primary ml-1">Edit</a>-->
-	<!--				</div>-->
-	<!--				<div class="btn-group">-->
-	<!--					<a href="{% url 'confirm_delete_guitar' guitar_id=guitar.id %}" class="btn btn-danger">Delete</a>-->
-	<!--				</div>-->
-	<!--			</div>-->
-	<!--		</div>-->
-	<!--	</div>-->
-	<!--	<div class="container-fluid">-->
-	<!--		<div class="col-md-12 product-info">-->
-	<!--			<ul id="myTab" class="nav nav-tabs nav_tabs">-->
-	<!--				<li class="active"><a href="#service-one" data-toggle="tab">DESCRIPTION</a></li>-->
-	<!--			</ul>-->
-	<!--			<div class="guitar_desc">-->
-	<!--				<p>{{guitar.desc}}</p>-->
-	<!--			</div>-->
-	<!--			<hr>-->
-	<!--		</div>-->
-	<!--	</div>-->
-	<!--</div>-->
 	{% endfor %}
 </div>
 
