--- a/templates/update_guitars.html
+++ b/templates/update_guitars.html
@@ -1,16 +1,11 @@
-{% extends "base.html" %} 
-
-{% load crispy_forms_tags %}
-
-{% block content %}
+{% extends "base.html" %} {% load crispy_forms_tags %} {% block content %}
 
 <div class="update_guitars">
-<h2>Update Guitars</h2>
-{{ form.media }}
+    <h2>Update Guitars</h2>
+    {{ form.media }}
     <form method='POST' enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form|crispy}}
-        <input type='submit' value='Update' class="btn btn-success submit_btn"/>
+        {% csrf_token %} {{ form|crispy}}
+        <input type='submit' value='Update' class="btn btn-success submit_btn" />
     </form>
 </div>
 
