--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -1,16 +1,11 @@
-{% extends 'base.html' %}
-
-{% load crispy_forms_tags %}
-
-{% block content %}
-
+{% extends 'base.html' %} {% load crispy_forms_tags %} {% block content %}
 
 <div class="signup_form">
   <h2>Sign up</h2>
   <form method="post">
-    {% csrf_token %}
-    {{ form|crispy }}
+    {% csrf_token %} {{ form|crispy }}
     <button type="submit" class="btn btn-success signup_btn">Sign up</button>
   </form>
-  </div>
+</div>
+
 {% endblock %}
