Cleaned up code

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <form method="GET" class="form-inline" action="{% url 'show_guitars' %}">
-          <input name="search_terms" class="form-control mr-sm-2" type="search" placeholder="Search for Guitars">
+          <input name="search_terms" class="form-control mr-sm-2" type="search" placeholder="Search...">
           <button class="btn btn-outline-light search_button" type="submit"><i class="fas fa-search"></i></button>
         </form>
         <li class="nav-item">
